feat(ImagePreview): add preview image slot (#11133)

--- a/packages/vant/src/image-preview/index.less
+++ b/packages/vant/src/image-preview/index.less
@@ -37,7 +37,8 @@
     left: 0;
   }
 
-  &__image {
+  &__image,
+  &__image-wrap {
     width: 100%;
     transition-property: transform;
 
@@ -46,7 +47,8 @@
       height: 100%;
     }
 
-    img {
+    img,
+    video {
       // disable desktop browser image drag
       -webkit-user-drag: none;
     }
