--- a/packages/vant/src/coupon/index.less
+++ b/packages/vant/src/coupon/index.less
@@ -34,6 +34,7 @@
   &__content {
     display: flex;
     align-items: center;
+    position: relative;
     box-sizing: border-box;
     min-height: var(--van-coupon-content-height);
     padding: var(--van-coupon-content-padding);
