fix(Coupon): incorrect field style

--- a/packages/vant/src/coupon-list/index.less
+++ b/packages/vant/src/coupon-list/index.less
@@ -16,7 +16,7 @@
   &__field {
     padding: var(--van-coupon-list-field-padding);
 
-    .van-field__:root {
+    .van-field__body {
       height: 34px;
       padding-left: var(--van-padding-sm);
       line-height: 34px;
