--- a/packages/vant/src/coupon/index.less
+++ b/packages/vant/src/coupon/index.less
@@ -34,7 +34,6 @@
   &__content {
     display: flex;
     align-items: center;
-    position: relative;
     box-sizing: border-box;
     min-height: var(--van-coupon-content-height);
     padding: var(--van-coupon-content-padding);
@@ -77,10 +76,9 @@
     white-space: pre-wrap;
   }
 
-  &__:root {
+  &__body {
     position: relative;
     flex: 1;
-    border-radius: 0 var(--van-coupon-radius) var(--van-coupon-radius) 0;
   }
 
   &__name {
