--- a/src/cellson/index.less
+++ b/src/cellson/index.less
@@ -7,9 +7,9 @@
   box-sizing: border-box;
   width: 100%;
   // padding: 14px 16px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding: 0 16px;
+  // padding-top: 10px;
+  // padding-bottom: 10px;
+  padding: 10px 16px;
   overflow: hidden;
   color: @cell-text-color;
   font-size: @cell-font-size;
