--- a/src/style/var.less
+++ b/src/style/var.less
@@ -1,20 +1,20 @@
 // Color Palette
 @black: #000;
 @white: #fff;
-@gray-1: #f7f8fa;
-@gray-2: #f2f3f5;
-@gray-3: #ebedf0;
+@gray-1: #f7f8fa; //背景色1
+@gray-2: #f2f3f5; //背景色2
+@gray-3: #E5E5E5; //边框色
 @gray-4: #dcdee0;
 @gray-5: #c8c9cc;
 @gray-6: #969799;
 @gray-7: #646566;
 @gray-8: #323233;
-@red: #ee0a24;
-@blue: #1989fa;
-@orange: #ff976a;
+@red: #F24957;
+@blue: #337EFF;
+@orange: #FFB21A;
 @orange-dark: #ed6a0c;
 @orange-light: #fffbe8;
-@green: #07c160;
+@green: #26BD71;
 
 // Gradient Colors
 @gradient-red: linear-gradient(to right, #ff6034, #ee0a24);
@@ -124,7 +124,6 @@
 @badge-dot-color: @red;
 @badge-dot-size: 8px;
 @badge-font-family: -apple-system-font, Helvetica Neue, Arial, sans-serif;
-
 // Button
 @button-mini-height: 24px;
 @button-mini-font-size: @font-size-xs;
@@ -151,7 +150,7 @@
 @button-warning-background-color: @orange;
 @button-warning-border-color: @orange;
 @button-border-width: @border-width-base;
-@button-border-radius: @border-radius-sm;
+@button-border-radius: @border-radius-md;
 @button-round-border-radius: @border-radius-max;
 @button-plain-background-color: @white;
 @button-disabled-opacity: @disabled-opacity;
@@ -776,18 +775,17 @@
 @swipe-indicator-inactive-background-color: @border-color;
 
 // Switch
-@switch-size: 30px;
-@switch-width: 2em;
+@switch-size: 27px;
+@switch-width: 1.75em;
 @switch-height: 1em;
 @switch-node-size: 1em;
 @switch-node-background-color: @white;
 @switch-node-box-shadow: 0 3px 1px 0 rgba(0, 0, 0, 0.05),
   0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 3px 3px 0 rgba(0, 0, 0, 0.05);
-@switch-background-color: @white;
+@switch-background-color: @gray-2;
 @switch-on-background-color: @blue;
 @switch-transition-duration: @animation-duration-base;
 @switch-disabled-opacity: @disabled-opacity;
-@switch-border: @border-width-base solid rgba(0, 0, 0, 0.1);
 
 // SwitchCell
 @switch-cell-padding-top: @cell-vertical-padding - 1px;
