--- a/src/switch/index.less
+++ b/src/switch/index.less
@@ -8,7 +8,7 @@
   height: @switch-height;
   font-size: @switch-size;
   background-color: @switch-background-color;
-  border: @switch-border;
+  border:  @border-width-base*2 solid @gray-2;;
   border-radius: @switch-node-size;
   cursor: pointer;
   transition: background-color @switch-transition-duration;
@@ -36,9 +36,9 @@
 
   &--on {
     background-color: @switch-on-background-color;
-
+    border: @border-width-base*2 solid @switch-on-background-color;
     .van-switch__node {
-      transform: translateX(@switch-width - @switch-node-size);
+      transform: translateX(@switch-width  - @switch-node-size);
     }
 
     .van-switch__loading {
