--- a/src/tabbar-item/index.less
+++ b/src/tabbar-item/index.less
@@ -40,12 +40,13 @@
   &__text {
     margin-top: 4px;
     font: normal normal normal 10px/1 'vant-icon';
-    font-size: inherit;
+    // font-size: inherit;
   }
 
   .van-info {
     // margin-top: @padding-base;
-    right: -12px;
+    right: -7px;
+    top:4px;
   }
 
   .van-iconv {
