--- a/src/radio/index.less
+++ b/src/radio/index.less
@@ -6,7 +6,7 @@
   overflow: hidden;
   cursor: pointer;
   user-select: none;
-  margin-bottom: 8px;
+  // margin-bottom: 8px;
 
   &--disabled {
     cursor: not-allowed;
