--- a/src/button/index.less
+++ b/src/button/index.less
@@ -84,7 +84,7 @@
     color: @button-info-background-color;
     border: 1px solid @button-info-background-color;
     &:active:not(.van-button--disabled){
-      background-color:fade( @button-info-background-color ,20%) ;
+      // background-color:fade( @button-info-background-color ,20%) ;
     }
   }
 
@@ -93,7 +93,7 @@
     color: @button-warning-background-color;
     border: 1px solid @button-warning-background-color;
     &:active:not(.van-button--disabled){
-      background-color:fade( @button-warning-background-color ,20%) ;
+      // background-color:fade( @button-warning-background-color ,20%) ;
     }
   }
   &--danger_secondary{
@@ -101,7 +101,7 @@
     color: @button-danger-background-color;
     border: 1px solid @button-danger-background-color;
     &:active:not(.van-button--disabled){
-      background-color:fade( @button-danger-background-color ,20%) ;
+      // background-color:fade( @button-danger-background-color ,20%) ;
     }
   }
 
