--- a/src/button/index.less
+++ b/src/button/index.less
@@ -132,7 +132,7 @@
   }
   &--middle {
     width: 164px;
-    font-size: @button-normal-font-size;
+    font-size: @button-default-font-size;
   }
 
   &--normal {
