fix: 注释field label 自带颜色走继承

--- a/src/field/index.less
+++ b/src/field/index.less
@@ -7,7 +7,7 @@
     width: @field-label-width;
     margin-right: @field-label-margin-right;
     margin-left: 6px;
-    color: @field-label-color;
+    // color: @field-label-color;
     text-align: left;
     word-wrap: break-word;
 
