--- a/src/style/third.less
+++ b/src/style/third.less
@@ -10,7 +10,7 @@
 
 div[root-app] .l-root-h5 {
   height: 100%;
-  padding-bottom: 0px;
+  padding-bottom: 0;
 
   &>.van-divider:first-child {
     margin-top: 0;
@@ -24,7 +24,7 @@ div[router-view-symbol] .l-root-h5 {
 .h5template-login-wrap {
   height: 100vh;
   padding: 4.26667vw;
-  background-color: #ffffff;
+  background-color: #fff;
 
   .login-title {
     font-family: PingFang SC;
@@ -32,7 +32,7 @@ div[router-view-symbol] .l-root-h5 {
     font-weight: 500;
     font-size: 7.46667vw;
     line-height: 10.4vw;
-    color: #333333;
+    color: #333;
     margin-bottom: 14.93333vw;
   }
 
@@ -88,8 +88,9 @@ div[router-view-symbol] .l-root-h5 {
     font-weight: 500;
     font-size: 4.8vw;
     letter-spacing: 4.8vw;
+    text-indent: 4.8vw;
     line-height: 12.8vw;
-    color: #ffffff;
+    color: #fff;
     border-radius: 1.06667vw;
   }
 
@@ -153,7 +154,7 @@ div[router-view-symbol] .l-root-h5 {
       font-weight: 500;
       font-size: 5.33333vw;
       line-height: 5.33333vw;
-      color: #333333;
+      color: #333;
     }
   }
 
@@ -171,7 +172,7 @@ div[router-view-symbol] .l-root-h5 {
 
   .user-logout {
     line-height: 14.93333vw;
-    background: #ffffff;
+    background: #fff;
     text-align: center;
     font-family: PingFang SC;
     font-style: normal;
@@ -200,6 +201,7 @@ div[router-view-symbol] .l-root-h5 {
     .m404-image {
       display: block;
       width: 160px;
+
       /* px-to-viewport-ignore */
       margin-left: auto;
       margin-right: auto;
@@ -207,12 +209,14 @@ div[router-view-symbol] .l-root-h5 {
 
     .m404-image-text {
       margin-top: 16px;
+
       /* px-to-viewport-ignore */
       text-align: center;
       font-family: PingFang SC;
       font-style: normal;
       font-weight: normal;
       font-size: 14px;
+
       /* px-to-viewport-ignore */
       color: #999;
     }
@@ -230,6 +234,7 @@ div[router-view-symbol] .l-root-h5 {
     .m401-image {
       display: block;
       width: 160px;
+
       /* px-to-viewport-ignore */
       margin-left: auto;
       margin-right: auto;
@@ -237,12 +242,14 @@ div[router-view-symbol] .l-root-h5 {
 
     .m401-image-text {
       margin-top: 16px;
+
       /* px-to-viewport-ignore */
       text-align: center;
       font-family: PingFang SC;
       font-style: normal;
       font-weight: normal;
       font-size: 14px;
+
       /* px-to-viewport-ignore */
       color: #999;
     }
@@ -250,23 +257,28 @@ div[router-view-symbol] .l-root-h5 {
     .m401-image-btn {
       // display: block;
       width: 96px;
+
       /* px-to-viewport-ignore */
       height: 32px;
+
       /* px-to-viewport-ignore */
       line-height: 32px;
       background: #337eff;
       border-radius: 4px;
+
       /* px-to-viewport-ignore */
       font-family: PingFang SC;
       font-style: normal;
       font-weight: normal;
       font-size: 14px;
+
       /* px-to-viewport-ignore */
       color: #fff;
       text-align: center;
       margin-left: auto;
       margin-right: auto;
       margin-top: 40px;
+
       /* px-to-viewport-ignore */
     }
   }
