--- a/src/button/index.less
+++ b/src/button/index.less
@@ -42,7 +42,7 @@
   }
 
   &--default {
-    color: @button-default-color;
+    color: @gray-8;
     background-color: @button-default-background-color;
     border: @button-border-width solid @border-color;
 
@@ -143,7 +143,7 @@
 
   &--small {
     height: @button-small-height;
-    padding: 0 25px;
+    padding: 0 24px;
     font-size: @button-small-font-size;
   }
 
