fix(ActionSheet): fix that close is invalid without title

--- a/src/action-sheet/index.less
+++ b/src/action-sheet/index.less
@@ -100,6 +100,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 1;
     padding: @action-sheet-close-icon-padding;
     color: @action-sheet-close-icon-color;
     font-size: @action-sheet-close-icon-size;
