fix(ActionSheet): fix that close is invalid without title

--- a/packages/vant/src/action-sheet/index.less
+++ b/packages/vant/src/action-sheet/index.less
@@ -123,6 +123,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    z-index: 1;
     padding: var(--van-action-sheet-close-icon-padding);
     color: var(--van-action-sheet-close-icon-color);
     font-size: var(--van-action-sheet-close-icon-size);
