perf(Skeleton): use Icon componet in Skeleton image to reduce bundle size

--- a/packages/vant/src/skeleton/index.less
+++ b/packages/vant/src/skeleton/index.less
@@ -79,13 +79,11 @@
       border-radius: var(--van-skeleton-image-radius);
     }
 
-    &__svg {
-      width: 48px;
-      height: 48px;
-    }
-
-    &__path {
-      fill: var(--van-gray-5);
+    &__icon {
+      width: calc(var(--van-skeleton-image-size) / 2);
+      height: calc(var(--van-skeleton-image-size) / 2);
+      font-size: calc(var(--van-skeleton-image-size) / 2);
+      color: var(--van-gray-5);
     }
   }
 }
