单选组多选组修改

--- a/src/checkbox-group/index.less
+++ b/src/checkbox-group/index.less
@@ -5,4 +5,14 @@
     display: flex;
     flex-wrap: wrap;
   }
+  .mantle {
+    z-index: 100;
+    position: absolute;
+    background: rgba(255, 255, 255, 0.8);
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    display: inline-block;
+  }
 }
