新增组件库调整属性和样式

--- a/src/progress/index.less
+++ b/src/progress/index.less
@@ -1,5 +1,11 @@
 @import '../style/var';
-
+.van-progress-room {
+  min-height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  // align-items: center;
+}
 .van-progress {
   position: relative;
   height: @progress-height;
