--- a/src/slider/index.less
+++ b/src/slider/index.less
@@ -1,5 +1,10 @@
 @import '../style/var';
-
+.van-slider-room {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: @slider-button-height;
+}
 .van-slider {
   position: relative;
   width: 100%;
