feat: add themeconfig

--- a/src/style/base.less
+++ b/src/style/base.less
@@ -2,6 +2,8 @@
  * Entry of basic styles
  */
 
+@import '../../src-vusion/styles/theme.css';
+
 @import './var';
 @import './normalize';
 @import './ellipsis';
