--- a/src/number-keyboard/index.less
+++ b/src/number-keyboard/index.less
@@ -110,7 +110,7 @@
     background-color: @number-keyboard-button-background-color;
 
     &.van-key--active {
-      background-color: darken(@number-keyboard-button-background-color, 10%);
+      // background-color: darken(@number-keyboard-button-background-color, 10%);
     }
   }
 
