--- a/src/step/index.less
+++ b/src/step/index.less
@@ -63,7 +63,7 @@
       // transform: translateX(-50%);
 
       @media (max-width: 321px) {
-        font-size: @step-horizontal-title-font-size - 1px;
+        font-size: calc(var(--step-horizontal-title-font-size) - 1px);
       }
     }
 
