feat: add tabbar for quicksetting

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -811,8 +811,8 @@
 @switch-cell-large-padding-bottom: calc(@cell-large-vertical-padding - 1px);
 
 // Tabbar
-@tabbar-height: 50px;
-@tabbar-z-index: 1;
+@tabbar-height: var(--tabbar-height);
+@tabbar-z-index: var(--tabbar-z-index);
 @tabbar-background-color: var(--tabbar-background-color);
 
 // TabbarItem
