--- a/src/tabbar-item/index.less
+++ b/src/tabbar-item/index.less
@@ -33,7 +33,7 @@
   }
 
   &--active {
-    color: #337EFF;
+    color: @tabbar-item-active-color;
     background-color: @tabbar-item-active-background-color;
   }
 
