slider自定义按钮

--- a/src/slider/index.less
+++ b/src/slider/index.less
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   min-height: @slider-button-height;
+  min-width: 100px;
 }
 .van-slider {
   position: relative;
